@@ -1,3 +1,9 @@
+2009-10-11  Jason Merrill  <jason@redhat.com>
+
+	PR c++/37204
+	* typeck.c (build_reinterpret_cast_1): Handle rvalue refs
+	properly.
+
 2009-10-11  Richard Guenther  <rguenther@suse.de>
 
 	* tree.c (cp_free_lang_data): Drop anonymous aggregate names.
